# vcgencmd

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
vcgencmd/: __init__.py  __main__.py  cli.py  formatters.py  readings.py  snapshot.py  vcgencmd.py
